--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -173,6 +173,7 @@
       "projects": "Projects",
       "publications": "Publications",
       "skills": "Skills",
+      "interests": "Interests",
       "languages": "Languages",
       "signature": "Signature"
     }
@@ -256,6 +257,15 @@
       "noSkills": "No skills added yet.",
       "getStarted": "Add your technical and soft skills above.",
       "tip": "Tip: Add 8-12 relevant skills. Include both technical skills (programming languages, tools) and soft skills (leadership, communication)."
+    },
+    "interests": {
+      "title": "Interests & Hobbies",
+      "subtitle": "Add your personal interests and hobbies",
+      "placeholder": "Enter an interest (e.g., Photography, Hiking, Reading)",
+      "add": "Add",
+      "noInterests": "No interests added yet.",
+      "getStarted": "Add your personal interests and hobbies above.",
+      "tip": "Tip: Share interests that demonstrate transferable skills or cultural fit. Examples: Team sports (teamwork), Blogging (communication), Open source (collaboration)."
     },
     "signature": {
       "title": "Signature",
