feat: add custom URL slug feature for resume sharing
- Add customizable slug UI with modal dialog
- Implement slug input validation and preview
- Add Customize URL button next to Share button
- Update share function to use slug when available
- Add English and French translations for slug feature

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -165,6 +165,15 @@
     "translateToFrench": "Translating to French...",
     "translatedSuccess": "Resume translated to French",
     "translationFailed": "Translation failed",
+    "customizeUrl": "Customize URL",
+    "customizeUrlTitle": "Customize Your Resume URL",
+    "customizeUrlDescription": "Create a personalized URL for your resume. Use only lowercase letters, numbers, and hyphens.",
+    "customSlugLabel": "Custom URL Slug",
+    "slugFormatHint": "Use only lowercase letters, numbers, and hyphens (e.g., john-doe-resume)",
+    "cancel": "Cancel",
+    "saveSlug": "Save URL",
+    "invalidSlugFormat": "Invalid URL format. Use only lowercase letters, numbers, and hyphens.",
+    "slugSaved": "Custom URL saved successfully!",
     "sections": {
       "personal": "Personal Info",
       "summary": "Summary",
