--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -165,6 +165,15 @@
     "translateToFrench": "Traduction en français...",
     "translatedSuccess": "CV traduit en français",
     "translationFailed": "Échec de la traduction",
+    "customizeUrl": "Personnaliser l'URL",
+    "customizeUrlTitle": "Personnaliser l'URL de votre CV",
+    "customizeUrlDescription": "Créez une URL personnalisée pour votre CV. Utilisez uniquement des lettres minuscules, des chiffres et des tirets.",
+    "customSlugLabel": "URL Personnalisée",
+    "slugFormatHint": "Utilisez uniquement des lettres minuscules, des chiffres et des tirets (ex : jean-dupont-cv)",
+    "cancel": "Annuler",
+    "saveSlug": "Enregistrer l'URL",
+    "invalidSlugFormat": "Format d'URL invalide. Utilisez uniquement des lettres minuscules, des chiffres et des tirets.",
+    "slugSaved": "URL personnalisée enregistrée avec succès !",
     "sections": {
       "personal": "Informations personnelles",
       "summary": "Résumé",
