feat: add en/fr translations for image repositioning UI

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -200,6 +200,8 @@
       "website": "Personal Website",
       "uploadImage": "upload user image",
       "removeBackground": "Remove Background",
+      "repositionImage": "Drag to reposition",
+      "resetPosition": "Reset position",
       "enterYour": "Enter your"
     },
     "professionalSummary": {
